RESOLVED FIXED287629
[GTK][WPE] <lang-attribute-affects-rendering.html> fails
https://bugs.webkit.org/show_bug.cgi?id=287629
Summary [GTK][WPE] <lang-attribute-affects-rendering.html> fails
Attachments
Deleted User
Comment 1 2025-02-13 06:01:03 PST
Some analysis, read the test-case for context: - https://searchfox.org/wubkat/rev/eb60a003e2487c2a8f34aaf8ce8f5d5af280ed55/Source/WebCore/platform/graphics/ComplexTextController.cpp#358 is called for "fi". - `m_font.fontDescription().computedLocale()` is "en" ("tr" for the -ref.html file). That's expected. - `FontCascade::fontForCombiningCharacterSequence` (https://searchfox.org/wubkat/rev/eb60a003e2487c2a8f34aaf8ce8f5d5af280ed55/Source/WebCore/platform/graphics/FontCascade.h#208) corresponds to different implementations: https://searchfox.org/wubkat/search?q=fontForCombiningCharacterSequence&redirect=false - Since the test passes for Safari, perhaps the implementation for Skia, which is used by GTK, is buggy: https://searchfox.org/wubkat/rev/eb60a003e2487c2a8f34aaf8ce8f5d5af280ed55/Source/WebCore/platform/graphics/skia/FontCascadeSkia.cpp#132
Deleted User
Comment 3 2025-02-17 02:41:18 PST
Deleted User
Comment 4 2025-02-18 07:39:28 PST
EWS
Comment 5 2025-03-06 05:00:32 PST
Committed 291691@main (c30953f1f00c): <https://commits.webkit.org/291691@main> Reviewed commits have been landed. Closing PR #40761 and removing active labels.
Radar WebKit Bug Importer
Comment 6 2025-03-06 05:01:17 PST
Note You need to log in before you can comment on or make changes to this bug.