[WPE][GTK] Propagate the font's computed locale to HarfBuzz https://bugs.webkit.org/show_bug.cgi?id=287629

Reviewed by Carlos Garcia Campos.

GTK and WPE use HarfBuzz and the language wasn't propagated to it.

* LayoutTests/TestExpectations:
* LayoutTests/imported/w3c/web-platform-tests/css/css-fonts/lang-attribute-affects-rendering-of-second-text-run-expected-mismatch.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-fonts/lang-attribute-affects-rendering-of-second-text-run-ref.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-fonts/lang-attribute-affects-rendering-of-second-text-run.html: Added.
* LayoutTests/platform/glib/TestExpectations:
* LayoutTests/platform/ios/TestExpectations:
* LayoutTests/platform/mac/TestExpectations:
* Source/WebCore/platform/graphics/skia/ComplexTextControllerSkia.cpp:
(WebCore::ComplexTextController::collectComplexTextRunsForCharacters):

Canonical link: https://commits.webkit.org/291691@main